--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,11 +7,13 @@ edition = "2024"
 anyhow = "1.0"
 axum = { version = "0.8", features = ["macros"] }
 clap = { version = "4.5", features = ["derive", "env"] }
+chrono = { version = "0.4", features = ["serde", "clock"] }
 opentelemetry = { version = "0.31", features = ["trace", "logs"] }
 opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
 opentelemetry_sdk = { version = "0.31", features = ["trace", "logs", "rt-tokio"] }
 opentelemetry-semantic-conventions = "0.31"
 opentelemetry-appender-tracing = "0.31.1"
+sha1 = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0"
@@ -20,3 +22,7 @@ tower-http = { version = "0.6", features = ["trace"] }
 tracing = "0.1"
 tracing-opentelemetry = "0.32"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
+walkdir = "2.5"
+
+[dev-dependencies]
+tempfile = "3.10"
