--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   devcontainer:
     build:
@@ -16,6 +14,8 @@ services:
       GALARIE_MEDIA_ROOT: /workspace/media
       GALARIE_CACHE_DIR: /workspace/.cache
       OTEL_EXPORTER_OTLP_ENDPOINT: http://otel-collector:4317
+    ports:
+      - "8080:8080"
     depends_on:
       - otel-collector
 
@@ -24,10 +24,6 @@ services:
     command: ["--config=/etc/otelcol-contrib/config.yaml"]
     volumes:
       - ./observability/otel-collector-config.yaml:/etc/otelcol-contrib/config.yaml:ro
-    ports:
-      - "4317:4317"
-      - "4318:4318"
-      - "8889:8889"
 
   prometheus:
     image: prom/prometheus:v3.0.0
@@ -41,8 +37,6 @@ services:
       - /prometheus:rw,mode=777
     volumes:
       - ./observability/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-    ports:
-      - "9090:9090"
 
   loki:
     image: grafana/loki:3.5.7
@@ -52,8 +46,6 @@ services:
     tmpfs:
       # This permission setting is required for avoiding error on startup
       - /tmp/loki:rw,mode=777
-    ports:
-      - "3100:3100"
 
   tempo:
     image: grafana/tempo:2.4.1
@@ -62,8 +54,6 @@ services:
       - /tmp/tempo:rw,mode=777
     volumes:
       - ./observability/tempo/tempo.yaml:/etc/tempo/tempo.yaml:ro
-    ports:
-      - "3200:3200"
 
   grafana:
     image: grafana/grafana:12.2.1
@@ -83,3 +73,12 @@ services:
       - ./observability/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources:ro
     ports:
       - "3300:3000"
+
+  swaggerui:
+    image: swaggerapi/swagger-ui:v5.30.2
+    environment:
+      SWAGGER_JSON: /specs/openapi.yaml
+    volumes:
+      - ../specs/galarie-media-platform/contracts/openapi.yaml:/specs/openapi.yaml:ro
+    ports:
+      - "8088:8080"
