--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,12 +17,14 @@ sha1 = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0"
-tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
+tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "fs", "process"] }
 tower-http = { version = "0.6", features = ["trace"] }
 tracing = "0.1"
 tracing-opentelemetry = "0.32"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
 walkdir = "2.5"
+image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif"] }
 
 [dev-dependencies]
 tempfile = "3.10"
+which = "6.0"
