--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 .serena/
 
 # Node / frontend
+node_modules/
 frontend/node_modules/
 frontend/dist/
 frontend/.vite/
@@ -32,3 +33,5 @@ coverage/
 /.cargo/
 /.tmp/
 /target/
+.env
+.env.*
