--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ node_modules/
 frontend/node_modules/
 frontend/dist/
 frontend/.vite/
+frontend/playwright-report/
+frontend/test-results/
 
 # Backend / Rust
 target/
