--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -26,6 +26,7 @@ walkdir = "2.5"
 image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif"] }
 
 [dev-dependencies]
+bytes = "1.6"
 tempfile = "3.10"
 which = "6.0"
 tower = "0.5"
