--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -24,6 +24,8 @@ tracing-opentelemetry = "0.32"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
 walkdir = "2.5"
 image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif"] }
+mime_guess = "2.0"
+tokio-util = { version = "0.7", features = ["io"] }
 
 [dev-dependencies]
 bytes = "1.6"
