--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,7 +18,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0"
 tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "fs", "process"] }
-tower-http = { version = "0.6", features = ["trace", "cors"] }
+tower = "0.5"
+tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
 tracing = "0.1"
 tracing-opentelemetry = "0.32"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
@@ -31,5 +32,4 @@ which = "6.0"
 [dev-dependencies]
 bytes = "1.6"
 tempfile = "3.10"
-tower = "0.5"
 http-body-util = "0.1"
